--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-active-menu": "^0.0.14",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-intersection-observer": "^9.4.3",
     "react-router-dom": "^6.9.0",
     "react-scroll": "^1.8.9",
