--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "@syncfusion/ej2-react-inputs": "^21.1.38",
     "animate.css": "^4.1.1",
     "axios": "^1.3.4",
+    "draft-js": "^0.11.7",
     "react": "^18.2.0",
     "react-active-menu": "^0.0.14",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-intersection-observer": "^9.4.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.9.0",
     "react-scroll": "^1.8.9",
+    "react-toastify": "^9.1.2",
     "react-use-scroll-snap": "^0.0.4",
+    "reactstrap": "^9.1.9",
     "scrollbar": "^0.1.12",
     "swiper": "^9.1.1",
     "tailwind": "^4.0.0"
